# hill-climb-racing-trainer

./: CMakeLists.txt  LICENSE.txt  README.md  Trainer.py  main.cpp  resource.rc
